<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.2</version>
        <relativePath/>
    </parent>

    <groupId>com.xh</groupId>
    <artifactId>xh-admin-backend</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <name>xh-admin-backend</name>
    <description>晓寒管理系统后端</description>
    <properties>
        <java.version>21</java.version>
        <!--    基础版本    -->
        <xh-admin.version>0.0.1-SNAPSHOT</xh-admin.version>
        <spring-cloud.version>2023.0.0</spring-cloud.version>
        <spring-cloud-alibaba.version>2022.0.0.0</spring-cloud-alibaba.version>
        <minio.version>8.5.7</minio.version>
        <springdoc-openapi-starter-webmvc-ui.version>2.3.0</springdoc-openapi-starter-webmvc-ui.version>
        <guava.version>32.1.1-jre</guava.version>
        <sa-token-spring-boot3-starter.version>1.37.0</sa-token-spring-boot3-starter.version>
        <hutool-version>5.8.25</hutool-version>
        <weixin-java-version>4.5.0</weixin-java-version>
        <javacv-version>1.5.9</javacv-version>
        <ip2region-version>2.7.0</ip2region-version>
        <xxl-job-version>2.4.0</xxl-job-version>
    </properties>

    <modules>
        <module>common</module>
        <module>system</module>
        <module>file</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <!--    定义依赖的默认版本    -->
    <dependencyManagement>
        <!-- Spring-Cloud-Alibaba -->
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-cloud-alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!--     MinIo对象存储       -->
            <dependency>
                <groupId>io.minio</groupId>
                <artifactId>minio</artifactId>
                <version>${minio.version}</version>
            </dependency>
            <!--     swagger        -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc-openapi-starter-webmvc-ui.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>com.xh</groupId>
                <artifactId>common-core</artifactId>
                <version>${xh-admin.version}</version>
            </dependency>
            <dependency>
                <groupId>com.xh</groupId>
                <artifactId>common-jdbc</artifactId>
                <version>${xh-admin.version}</version>
            </dependency>
            <dependency>
                <groupId>com.xh</groupId>
                <artifactId>common-log</artifactId>
                <version>${xh-admin.version}</version>
            </dependency>
            <dependency>
                <groupId>com.xh</groupId>
                <artifactId>common-swagger</artifactId>
                <version>${xh-admin.version}</version>
            </dependency>
            <dependency>
                <groupId>com.xh</groupId>
                <artifactId>common-xxljob</artifactId>
                <version>${xh-admin.version}</version>
            </dependency>
            <dependency>
                <groupId>com.xh</groupId>
                <artifactId>system-client</artifactId>
                <version>${xh-admin.version}</version>
            </dependency>
            <dependency>
                <groupId>com.xh</groupId>
                <artifactId>file-client</artifactId>
                <version>${xh-admin.version}</version>
            </dependency>
            <dependency>
                <groupId>com.xh</groupId>
                <artifactId>wechat-client</artifactId>
                <version>${xh-admin.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.dev33</groupId>
                <artifactId>sa-token-spring-boot3-starter</artifactId>
                <version>${sa-token-spring-boot3-starter.version}</version>
            </dependency>
            <!-- Sa-Token 整合 Redis （使用 jackson 序列化方式） -->
            <dependency>
                <groupId>cn.dev33</groupId>
                <artifactId>sa-token-redis-jackson</artifactId>
                <version>${sa-token-spring-boot3-starter.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-http</artifactId>
                <version>${hutool-version}</version>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-captcha</artifactId>
                <version>${hutool-version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.binarywang</groupId>
                <artifactId>weixin-java-miniapp</artifactId>
                <version>${weixin-java-version}</version>
            </dependency>
            <dependency>
                <groupId>org.bytedeco</groupId>
                <artifactId>javacv-platform</artifactId>
                <version>${javacv-version}</version>
            </dependency>

            <!--      ip属地离线查询      -->
            <dependency>
                <groupId>org.lionsoul</groupId>
                <artifactId>ip2region</artifactId>
                <version>${ip2region-version}</version>
            </dependency>
            <!-- 官方文档地址 https://www.xuxueli.com/xxl-job -->
            <dependency>
                <groupId>com.xuxueli</groupId>
                <artifactId>xxl-job-core</artifactId>
                <version>${xxl-job-version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <distributionManagement>
        <!--    如需发布到仓库，这里配置选项    -->
    </distributionManagement>

    <build>
        <!--  全局通用配置    -->
        <!--  参考文档 https://docs.spring.io/spring-boot/docs/3.1.1/maven-plugin/reference/htmlsingle/#packaging      -->
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <image>
                            <name>xh-admin-${project.artifactId}</name>
                            <env>
                                <!-- jdk版本-->
                                <BP_JVM_VERSION>21</BP_JVM_VERSION>
                            </env>
                            <!-- 镜像打标签 -->
                            <tags>
                                <!-- 示例： 镜像库地址/镜像名称:标签  -->
                                <!-- <tag>localhost:5000/${project.artifactId}:latest</tag>-->
                            </tags>
                            <!-- 如果要推送到镜像库，设为true -->
                            <!-- <publish>true</publish> -->
                        </image>
                        <docker>
                            <!-- 镜像库账号密码 -->
                            <publishRegistry>
                                <username>user</username>
                                <password>secret</password>
                            </publishRegistry>
                        </docker>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                        <!--                        <execution>-->
                        <!--                            <id>build-image</id>-->
                        <!--                            <goals>-->
                        <!--                                <goal>build-image</goal>-->
                        <!--                            </goals>-->
                        <!--                        </execution>-->
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
